style.css
:root {
    --primary: #92d050;
    --secondary: #00b050;
    --secondaryTranslucent: rgba(0, 176, 80, 0.7);
    --card: rgba(255, 255, 255, 0.8);
}

@font-face {
    font-family: "VCR OSD Mono";
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: local("VCR OSD Mono"), url("media/Font.ttf") format("ttf"), url("media/Font.woff2") format("woff2");
}

* {
    font-family: "Roboto", sans-serif;
}

body {
    background: url("media/Background.png"), var(--primary);
    background-repeat: no-repeat;
    background-size: auto 100vh;
}

h1, h1 *, h2, h2 * {
    font-family: "VCR OSD Mono", monospace, sans-serif;
}

div.card h1 {
    margin-top: 0;
}

div.card {
    margin-bottom: 8px;
    padding: 8px;
    background-color: var(--card);
}

div.flex {
    display: flex!important;
    align-items: center;
}

div.flex > div {
    width: 100%;
    padding-left: 10px;
}

input {
    margin: 8px;
    padding: 8px;
    background-color: white;
    border: 2px solid #c7c7c7;
}

button {
    margin: 8px;
    padding: 8px;
    background-color: var(--secondary);
    color: white;
    border: 2px solid var(--secondary);
}

img.thumbnail {
    width: 100px;
}

video {
    background-color: black;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 40px;
    padding-top: 8px;
    padding-bottom: 8px;
    background-color: var(--secondaryTranslucent);                                                                                                                                                                                                                                                                                 ;
    text-align: center;
}

header img {
    height: 40px;
}

main {
    margin-top: 64px;
    margin-bottom: 64px;
}

footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: calc(100vw - 16px);
    padding: 8px;
    background-color: var(--secondary);
    text-align: center;
    font-size: 26px;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
}

footer a {
    margin-left: 4px;
    margin-right: 4px;
    color: black;
    text-decoration: none;
    font-family: "VCR OSD Mono", monospace, sans-serif;
}

footer a.selected {
    font-weight: 700;
}

.center {
    text-align: center;
}

.desktop {
    display: unset;
}

.mobile {
    display: none;
}

.notSignedIn {
    display: none;
}

.signedIn {
    display: none;
}

.scanTrail {
    display: none;
}

.scanMembership {
    display: none;
}

.scanError {
    display: none;
}

.scanContent {
    white-space: pre-wrap;
}

#signIn {
    display: none;
}

#signUp {
    display: none;
}

#scanner {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    object-fit: cover;
    z-index: -1;
    transform: rotateY(180deg);
}

#lens {
    position: absolute;
    top: calc(calc(100vh - 33.3vw) / 2);
    left: calc(calc(100vw - 33.3vw) / 2);
    width: 33.3vw;
    height: 33.3vw;
    background-color: rgba(255, 255, 255, 0.4);
}

#qrCode {
    margin-bottom: 8px;
}

#qrCode img {
    height: 150px;
    margin-left: auto;
    margin-right: auto;
    border: 5px solid white;
}

